--- a/ERP/ERP.Api/ERP.Api.csproj
+++ b/ERP/ERP.Api/ERP.Api.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C4986273-C1CE-448B-8AE7-ADCA70285DDC}</ProjectGuid>
+    <ProjectGuid>{17FAB3D1-89A0-49D5-AE0A-CC51244E61CF}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -150,6 +150,26 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\BanHang\" />
+    <Folder Include="Controllers\ChucNang\" />
+    <Folder Include="Controllers\CoCauToChuc\" />
+    <Folder Include="Controllers\Comments\" />
+    <Folder Include="Controllers\DanhMuc\" />
+    <Folder Include="Controllers\DichVu\" />
+    <Folder Include="Controllers\HangHoa\" />
+    <Folder Include="Controllers\HeThong\" />
+    <Folder Include="Controllers\KeToan\" />
+    <Folder Include="Controllers\KhachHang\" />
+    <Folder Include="Controllers\Kho\" />
+    <Folder Include="Controllers\Menu\" />
+    <Folder Include="Controllers\MuaHang\" />
+    <Folder Include="Controllers\NganHang\" />
+    <Folder Include="Controllers\NhaCungCap\" />
+    <Folder Include="Controllers\NhanVien\" />
+    <Folder Include="Controllers\Posts\" />
+    <Folder Include="Controllers\Quy\" />
+    <Folder Include="Controllers\TonKho\" />
+    <Folder Include="Controllers\XuLy\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -185,7 +205,6 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -198,7 +217,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\ResourceModel.cshtml" />
@@ -221,6 +243,12 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\respond.js" />
+    <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -230,6 +258,7 @@
     </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -238,8 +267,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -257,7 +290,7 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>63145</DevelopmentServerPort>
+          <DevelopmentServerPort>55307</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:63015/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
